--- a/strapi/package.json
+++ b/strapi/package.json
@@ -20,10 +20,10 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@strapi/plugin-cloud": "^5.30.0",
+    "@strapi/plugin-cloud": "5.36.0",
     "@strapi/plugin-seo": "^2.0.4",
-    "@strapi/plugin-users-permissions": "^5.30.0",
-    "@strapi/strapi": "^5.30.0",
+    "@strapi/plugin-users-permissions": "5.36.0",
+    "@strapi/strapi": "5.36.0",
     "better-sqlite3": "11.7.0",
     "patch-package": "^8.0.0",
     "pluralize": "^8.0.0",
@@ -37,7 +37,7 @@
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "LAUNCHPAD"
+    "uuid": "LAUNCHPAD-LOCAL-fae018da-beba-4081-a1eb-9ac5a0f71d78"
   },
   "engines": {
     "node": ">=18.0.0 <=22.x.x",
